syntax = "proto3";

package product;

option go_package = "./";

message Product {
    int64 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
}

message CreateProductResponse {
    Product product = 1;
}

message GetProductRequest {
    int64 id = 1;
}

message GetProductResponse {
    Product product = 1;
}

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}
